fetch property info instead of state, fix collapse arrow orientation

--- a/src/components/styles/Collapse.scss
+++ b/src/components/styles/Collapse.scss
@@ -36,7 +36,7 @@
     }
     &.isClosed {
       &::after {
-        transform: rotate(180deg);
+        transform: rotate(0deg);
       }
       + .collapse-content {
         display: none;
@@ -46,9 +46,11 @@
       content: '';
       height: 10px;
       width: 16px;
+      transform: rotate(180deg);
       background-size: 16px 10px;
       background-image: url('/assets/arrow.svg');
       background-repeat: no-repeat;
+      transition: all 0.2s ease-in;
       @media screen and (min-width: $bp-desktop) {
         height: 15px;
         width: 24px;
